@@ -22,10 +22,10 @@ TEST=
 APPS=
 
 LIB=$(TOP)/libcrypto.a
-LIBSRC= ocsp_asn.c ocsp_ext.c \
+LIBSRC= ocsp_asn.c ocsp_ext.c ocsp_ht.c \
 	ocsp_lib.c ocsp_prn.c ocsp_err.c
 
-LIBOBJ= ocsp_asn.o ocsp_ext.o \
+LIBOBJ= ocsp_asn.o ocsp_ext.o ocsp_ht.o \
 	ocsp_lib.o ocsp_prn.o ocsp_err.o
 
 SRC= $(LIBSRC)
