@@ -1,4 +1,4 @@
-/* ocsp.c */
+/* ocsp_asn.c */
 /* Written by Dr Stephen N Henson (shenson@bigfoot.com) for the OpenSSL
  * project 2000.
  */
