@@ -150,7 +150,7 @@ IMPLEMENT_ASN1_FUNCTIONS(DIST_POINT_NAME)
 ASN1_SEQUENCE(DIST_POINT) = {
 	ASN1_EXP_OPT(DIST_POINT, distpoint, DIST_POINT_NAME, 0),
 	ASN1_IMP_OPT(DIST_POINT, reasons, ASN1_BIT_STRING, 1),
-	ASN1_IMP_SEQUENCE_OF_OPT(DIST_POINT, distpoint, GENERAL_NAME, 2)
+	ASN1_IMP_SEQUENCE_OF_OPT(DIST_POINT, CRLissuer, GENERAL_NAME, 2)
 } ASN1_SEQUENCE_END(DIST_POINT);
 
 IMPLEMENT_ASN1_FUNCTIONS(DIST_POINT)
